fix navbar jittery movement. changed on hover color. fix navbar alignment issue on mobile

--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -87,9 +87,11 @@
     grid-column-gap: 0.4em;
 }
 
-.l-nav li:first-child {
-    text-align: left;
-    margin-left: 0.5em;
+@media screen and (min-width: 40.01em) {
+    .l-nav li:first-child {
+        text-align: left;
+        margin-left: 0.5em;
+    }
 }
 
 /* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. 
