--- a/src/css/theme.css
+++ b/src/css/theme.css
@@ -23,10 +23,7 @@
 }
 
 .l-nav a:hover {
-    background-color: #243949;
-    color: #fff;
-    border-radius: 0.3em;
-    padding: 3px 8px;
+    color: #ececec;
 }
 
 /**
